added calculate average route
